Añadida documentación JavaDoc y pruebas unitarias